<resources>
    <string name="app_name">TransactionsHomework</string>
    <string name="ok">OK</string>

    <!-- Transactions Screen -->
    <string name="transactionsTvBalance">Account Balance: %,.2f</string>
    <string name="transactionsTvBalancePlaceHolder">Account Balance: 0.0</string>
    <string name="transactionsTvAmount">%,.2f</string>
    <!-- /Transactions Screen -->

    <!-- Transaction Details Screen -->
    <string name="transactionDetailsTvName">Name:</string>
    <string name="transactionDetailsTvAccount">Account:</string>
    <string name="transactionDetailsTvDate">Date and Time of Transaction:</string>
    <string name="transactionDetailsTvAmount">Transaction amount:</string>
    <string name="transactionDetailsTvDesc">Transaction description:</string>
    <!-- /Transaction Details Screen -->
</resources>